# AutoOfficeWorkV2

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/fix/: 001-date-format-detection-and-row-count-gt.md  002-remove-today-magic-string.md  003-dynamic-parameter-framework.md
docs/plans/: 2026-04-03-init-month-columns.md
docs/superpowers/plans/: 2026-03-27-find-date-column-copy-range.md  2026-04-01-anchor-daterange-builtin.md
docs/superpowers/specs/: 2026-04-01-anchor-daterange-builtin-design.md
examples/defect_rate/: sample_plan.json  sample_thinking_log.txt  task_description.txt
schemas/: execution_plan.schema.json
skills/: SKILLS.md
skills/execution-plan-generator/: SKILL.md
skills/execution-plan-generator/references/: action_reference.md  dynamic_params_guide.md  execution_plan_schema.json  pydantic_model.py  sample_plan.json
src/autooffice/: __init__.py  cli.py
src/autooffice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/autooffice/cache/: __init__.py  plan_cache.py
src/autooffice/engine/: __init__.py  context.py  runner.py
src/autooffice/models/: __init__.py  action_result.py  execution_plan.py
tests/: conftest.py  test_cli_inputs.py
tests/test_engine/: test_context.py  test_context_input_files.py  test_runner.py  test_user_file_paths.py
tests/test_engine/test_actions/: test_aggregate_range.py  test_date_actions.py  test_excel_actions.py  test_find_anchor.py  test_find_date_range.py  test_init_month_columns.py  test_open_file_input_key.py  test_validate_actions.py
(+19 files in other folders)
