[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autooffice"
version = "0.1.0"
description = "Claude 사고 프로세스 기반 사무 업무 자동화 실행 엔진"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xlwings>=0.30.0",
    "pydantic>=2.0.0",
    "python-pptx>=0.6.21",
    "requests>=2.31.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
autooffice = "autooffice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
